# followthemoney

./: .env.example  .gitignore  design.md  pyproject.toml  reel_utils.py  research.py  script.py  trends.py
data/: pipeline.db
pipeline/: fetch_images.py  trends.py
publishing/: post_to_buffer.py
reel/: cleanup.py  make_captions.py  make_sport_reel.py
reel_template/: GUIDE.md  make_captions.py  make_reading_reel.py  make_reel.py
